[gd_scene load_steps=8 format=3 uid="uid://dweckt5oraox7"]

[ext_resource type="Script" path="res://scenes/game_button/scripts/game_button.gd" id="1_ggd64"]
[ext_resource type="Texture2D" uid="uid://bpxmqyewmqdev" path="res://scenes/game_button/visuals/capsule_test.png" id="1_q6lu3"]
[ext_resource type="Texture2D" uid="uid://rg5y0f8we0t4" path="res://scenes/game_button/visuals/cross.png" id="3_js23g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dcdjw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7ifx"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xr24c"]
bg_color = Color(0, 0.780392, 0.305882, 0.27451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfxkt"]
bg_color = Color(0.239216, 0.239216, 0.239216, 0.647059)

[node name="Game" type="Button"]
process_mode = 1
offset_right = 336.0
offset_bottom = 507.0
pivot_offset = Vector2(168, 253.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dcdjw")
theme_override_styles/hover = SubResource("StyleBoxFlat_q7ifx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xr24c")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pfxkt")
theme_override_styles/focus = SubResource("StyleBoxFlat_q7ifx")
toggle_mode = true
script = ExtResource("1_ggd64")

[node name="Capsule" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_q6lu3")
expand_mode = 1
stretch_mode = 5

[node name="Cross" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 111.0
offset_top = 168.0
offset_right = -111.0
offset_bottom = -166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_js23g")
expand_mode = 1
stretch_mode = 5

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
